--- a/services/config/src/main/resources/configurations/application.yml
+++ b/services/config/src/main/resources/configurations/application.yml
@@ -4,13 +4,12 @@ eureka:
   client:
     service-url:
       defaultZone: http://localhost:8761/eureka
-
+name:
+  value: datien
 spring:
   cloud:
     config:
       override-system-properties: false
-  application:
-    name: datien
 
 management:
   tracing:
