--- a/services/config/src/main/resources/configurations/auth-service.yml
+++ b/services/config/src/main/resources/configurations/auth-service.yml
@@ -1,4 +1,14 @@
 spring:
+  datasource:
+    url: jdbc:mysql://localhost:3306/auth
+    username: root
+    password: root
+    driver-class-name: com.mysql.cj.jdbc.Driver
+  jpa:
+    hibernate:
+      ddl-auto: update
+    database: mysql
+    database-platform: org.hibernate.dialect.MySQL8Dialect
   security:
     oauth2:
       client:
