--- a/services/customer/pom.xml
+++ b/services/customer/pom.xml
@@ -94,6 +94,14 @@
 			<artifactId>lombok-mapstruct-binding</artifactId>
 			<version>${lombok-mapstruct-binding.version}</version>
 		</dependency>
+
+        <!-- Common (exception & response) -->
+        <dependency>
+            <groupId>com.eCommerce</groupId>
+            <artifactId>common</artifactId>
+            <version>0.0.1-SNAPSHOT</version>
+            <scope>compile</scope>
+        </dependency>
 	</dependencies>
 	<dependencyManagement>
 		<dependencies>
