--- a/services/notification/pom.xml
+++ b/services/notification/pom.xml
@@ -75,6 +75,14 @@
 			<artifactId>spring-kafka-test</artifactId>
 			<scope>test</scope>
 		</dependency>
+
+        <!-- Common (exception & response) -->
+        <dependency>
+            <groupId>com.eCommerce</groupId>
+            <artifactId>common</artifactId>
+            <version>0.0.1-SNAPSHOT</version>
+            <scope>compile</scope>
+        </dependency>
 	</dependencies>
 	<dependencyManagement>
 		<dependencies>
