--- a/services/payment/pom.xml
+++ b/services/payment/pom.xml
@@ -9,7 +9,7 @@
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
 	<groupId>com.eCommerce</groupId>
-	<artifactId>Payment</artifactId>
+	<artifactId>payment</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<name>Payment</name>
 	<description>Payment service for E-Commerce app</description>
@@ -84,6 +84,14 @@
 			<artifactId>spring-kafka-test</artifactId>
 			<scope>test</scope>
 		</dependency>
+
+        <!-- Common (exception & response) -->
+        <dependency>
+            <groupId>com.eCommerce</groupId>
+            <artifactId>common</artifactId>
+            <version>0.0.1-SNAPSHOT</version>
+            <scope>compile</scope>
+        </dependency>
 	</dependencies>
 	<dependencyManagement>
 		<dependencies>
