--- a/services/config/src/main/resources/configurations/order-service.yml
+++ b/services/config/src/main/resources/configurations/order-service.yml
@@ -5,7 +5,7 @@ spring:
   datasource:
     url: jdbc:mysql://localhost:3306/order
     username: root
-    password: tiendat1409
+    password: root
     driver-class-name: com.mysql.cj.jdbc.Driver
   jpa:
     hibernate:
