--- a/services/config/src/main/resources/configurations/payment-service.yml
+++ b/services/config/src/main/resources/configurations/payment-service.yml
@@ -4,7 +4,7 @@ spring:
   datasource:
     url: jdbc:mysql://localhost:3306/payment
     username: root
-    password: tiendat1409
+    password: root
   jpa:
     hibernate:
       ddl-auto: create
