--- a/services/config/src/main/resources/configurations/product-service.yml
+++ b/services/config/src/main/resources/configurations/product-service.yml
@@ -18,6 +18,20 @@ spring:
     user: ${spring.datasource.username}
     password: ${spring.datasource.password}
     location: classpath:db.migration
+  kafka:
+    bootstrap-servers: localhost:9092
+    consumer:
+      group-id: payment-service-group
+      key-deserializer: org.apache.kafka.common.serialization.StringDeserializer
+      value-deserializer: org.springframework.kafka.support.serializer.JsonDeserializer
+      properties:
+        spring.json.trusted.packages: "com.eCommerce.common.events"
+    producer:
+      key-serializer: org.apache.kafka.common.serialization.StringSerializer
+      value-serializer: org.springframework.kafka.support.serializer.JsonSerializer
+      properties:
+        spring.json.type.mapping: orderConfirmation:com.ecommerce.kafka.OrderConfirmation
+        spring.json.trusted.packages: "com.eCommerce.common.events"
 
 server:
   port: 8050
