--- a/services/config/src/main/resources/configurations/auth-service.yml
+++ b/services/config/src/main/resources/configurations/auth-service.yml
@@ -24,5 +24,19 @@ spring:
             token-uri: https://oauth2.googleapis.com/token
             user-info-uri: https://www.googleapis.com/userinfo/v2/me
             user-name-attribute: email
+  kafka:
+    bootstrap-servers: localhost:9092
+    consumer:
+      group-id: payment-service-group
+      key-deserializer: org.apache.kafka.common.serialization.StringDeserializer
+      value-deserializer: org.springframework.kafka.support.serializer.JsonDeserializer
+      properties:
+        spring.json.trusted.packages: "com.eCommerce.common.events"
+    producer:
+      key-serializer: org.apache.kafka.common.serialization.StringSerializer
+      value-serializer: org.springframework.kafka.support.serializer.JsonSerializer
+      properties:
+        spring.json.type.mapping: orderConfirmation:com.ecommerce.kafka.OrderConfirmation
+        spring.json.trusted.packages: "com.eCommerce.common.events"
 server:
   port: 8040
