Fixbug Auth and Change flow Product

--- a/services/product/src/main/resources/application.yml
+++ b/services/product/src/main/resources/application.yml
@@ -3,3 +3,6 @@ spring:
     import: optional:configserver:http://localhost:8888
   application:
     name: product-service
+redis:
+  host: 127.0.0.1
+  port: 6379
