--- a/services/config/src/main/resources/configurations/gateway-service.yml
+++ b/services/config/src/main/resources/configurations/gateway-service.yml
@@ -7,6 +7,10 @@ spring:
         locator:
           enabled: true
       routes:
+        - id: auth-service
+          uri: lb://AUTH-SERVICE
+          predicates:
+            - Path=/api/v1/auth/**
         - id: customer-service
           uri: lb://CUSTOMER-SERVICE
           predicates:
