--- a/services/gateway/pom.xml
+++ b/services/gateway/pom.xml
@@ -58,17 +58,27 @@
             <artifactId>zipkin-reporter-brave</artifactId>
         </dependency>
 
-        <!-- Common module (JwtUtils, Kafka config, etc.) -->
+        <!-- Common module (JwtUtils, Redis config, ...),
+             nhưng loại bỏ toàn bộ phần MVC/Servlet & swagger MVC -->
         <dependency>
             <groupId>com.eCommerce</groupId>
             <artifactId>common</artifactId>
             <version>0.0.1-SNAPSHOT</version>
             <scope>compile</scope>
-            <!-- Quan trọng: loại bỏ MVC/Tomcat để không xung đột với Gateway WebFlux -->
             <exclusions>
+                <!-- Không kéo servlet MVC vào gateway -->
+                <exclusion>
+                    <groupId>org.springframework.boot</groupId>
+                    <artifactId>spring-boot-starter-web</artifactId>
+                </exclusion>
                 <exclusion>
                     <groupId>org.springframework.boot</groupId>
                     <artifactId>spring-boot-starter-tomcat</artifactId>
+                </exclusion>
+                <!-- Nếu common có swagger MVC thì cũng loại nó ra -->
+                <exclusion>
+                    <groupId>org.springdoc</groupId>
+                    <artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
                 </exclusion>
             </exclusions>
         </dependency>
@@ -87,11 +97,23 @@
             <scope>test</scope>
         </dependency>
         <dependency>
+            <groupId>org.springframework.security</groupId>
+            <artifactId>spring-security-config</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.security</groupId>
+            <artifactId>spring-security-web</artifactId>
+        </dependency>
+
+        <!-- KHÔNG được phụ thuộc vào module auth trong gateway -->
+        <!-- ĐÃ GỠ BỎ:
+        <dependency>
             <groupId>com.eCommerce</groupId>
             <artifactId>auth</artifactId>
             <version>0.0.1-SNAPSHOT</version>
             <scope>compile</scope>
         </dependency>
+        -->
     </dependencies>
 
     <dependencyManagement>
