--- a/services/gateway/src/main/resources/application.yml
+++ b/services/gateway/src/main/resources/application.yml
@@ -3,6 +3,8 @@ spring:
     import: optional:configserver:http://localhost:8888
   application:
     name: gateway-service
+  main:
+    allow-bean-definition-overriding: true
 application:
   security:
     jwt:
