Done config security

--- a/services/gateway/pom.xml
+++ b/services/gateway/pom.xml
@@ -48,6 +48,11 @@
             <artifactId>spring-boot-starter-actuator</artifactId>
         </dependency>
 
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter-loadbalancer</artifactId>
+        </dependency>
+
         <!-- Tracing (optional) -->
         <dependency>
             <groupId>io.micrometer</groupId>
