--- a/services/config/src/main/resources/configurations/gateway-service.yml
+++ b/services/config/src/main/resources/configurations/gateway-service.yml
@@ -26,7 +26,7 @@ spring:
         - id: product-service
           uri: lb://PRODUCT-SERVICE
           predicates:
-            - Path=/api/v1/products/**
+            - Path=/api/v1/products/**,/api/v1/admin/products/**,/api/v1/categories/**,/api/v1/admin/categories/**
         - id: payment-service
           uri: lb://PAYMENT-SERVICE
           predicates:
